laatste opdracht maken, alleen overflow nog fixen

--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -1,1 +1,95 @@
-/*Schrijf hier jouw css*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&display=swap');
+
+/* typography styling */
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+    font-weight: 600;
+}
+
+p {
+    font-weight: 400;
+}
+
+/* general styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+/* nav styling */
+.analytica-title {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.nav-class {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #030027;
+    color: white;
+    height: 130px;
+}
+
+.p-class {
+    display: flex;
+    justify-content: flex-start;
+    flex-basis: calc(100vw - 500px);
+
+}
+
+.list-class {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-basis: 420px;
+
+}
+
+/* main area styling */
+.main-styling{
+    display: flex;
+    flex-direction: column;
+    background-color: #F2F3D9;
+    height: calc(100vh - 130px);
+
+}
+.header-class {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+    color:#030027 ;
+}
+
+.outer-container {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 40px;
+    width: 1100px;
+    gap: 20px;
+}
+
+.child-class {
+    display: flex;
+    flex-basis: 280px;
+    height: 350px;
+    background-color: #C16E70;
+    text-align: center;
+    align-items: flex-end;
+    padding: 10px;
+}
+
